Version 8.20 (Unreleased)
-------------------------

Schema Changes
~~~~~~~~~~~~~~
- Added index on ``ProjectPlatform(last_seen)`` column
- Added index on ``GroupCommitResolution.commit_id``

Version 8.19
------------

- Hide project filter when there are no projects to list.
- Added lookup methods to constants to get a unique `integration_id` for a given
  event, and to get information (documention url, human readable name) from that id.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Integration``, ``OrganizationIntegration``, and ``ProjectIntegration`` models
- Added ``Repository(integration_id)`` column

Version 8.18
------------

- Expanded resolution options to allow current and explicit versions.
- Added proguard support
- Removed support for global dsyms.
- Moved Queue admin page to React.
- Replaced usage of jQuery Flot library with internal graphs.
- Expanded ignore actions to include deltas and rates for both occurances and
  users impacted.
- Add a new option (`auth.allow-registration`) for determining whether registration
  is allowed on an installation.
- Moved "create organization" into React.
- Expanded React Form components (Form, ApiForm).
- Moved "create team" into React.
- add Slack to supported auth backends in social auth (for plugins)
- Expanded resolution actions (on stream) to include current release and explicit
  release.

Schema Changes
~~~~~~~~~~~~~~

- Added Release.commit_count
- Added Release.last_commit_id
- Added Release.authors
- Added Release.total_deploys
- Added Release.last_deploy_id
- Added ``FeatureAdoption`` model
- Removed DSymBundle
- Removed DSymObject
- Removed DSymSDK
- Removed DSymSymbol
- Removed GlobalDSymFile
- Added GroupHash.state
- Drop index on ``ReleaseEnvironment(project_id)``
- Drop index on ``ReleaseCommit(project_id)``
- Drop unique constraint on ``ReleaseEnvironment(project_id, release_id, environment_id)``
- Added GroupResolution.type
- Added GroupResolution.actor_id
- Added Project.platform