@@ -1,5 +1,6 @@
 import React from 'react';
 import PropTypes from '../../proptypes';
+import {t} from '../../locale';
 
 const GroupEventDataSection = React.createClass({
   propTypes: {
@@ -7,12 +8,15 @@ const GroupEventDataSection = React.createClass({
     event: PropTypes.Event.isRequired,
     title: React.PropTypes.any,
     type: React.PropTypes.string.isRequired,
-    wrapTitle: React.PropTypes.bool
+    wrapTitle: React.PropTypes.bool,
+    toggleRaw: React.PropTypes.func,
+    raw: React.PropTypes.bool
   },
 
   getDefaultProps() {
     return {
-      wrapTitle: true
+      wrapTitle: true,
+      raw: false
     };
   },
 
@@ -45,8 +49,27 @@ const GroupEventDataSection = React.createClass({
               <em className="icon-anchor" />
             </a>
             {this.props.wrapTitle
-              ? <h3>{this.props.title}</h3>
-              : <div>{this.props.title}</div>}
+              ? <h3>
+                  {this.props.title}
+                </h3>
+              : <div>
+                  {this.props.title}
+                </div>}
+            {this.props.type === 'extra' &&
+              <div className="btn-group pull-right">
+                <a
+                  className={
+                    (!this.props.raw ? 'active' : '') + ' btn btn-default btn-sm'
+                  }
+                  onClick={() => this.props.toggleRaw(false)}>
+                  {t('Formatted')}
+                </a>
+                <a
+                  className={(this.props.raw ? 'active' : '') + ' btn btn-default btn-sm'}
+                  onClick={() => this.props.toggleRaw(true)}>
+                  {t('Raw')}
+                </a>
+              </div>}
           </div>}
         <div className="box-content with-padding">
           {this.props.children}
