@@ -1172,6 +1172,22 @@
   }
 }
 
+.extra-data
+  .box
+    .box-header {
+      margin-bottom: 20px;
+
+      h3 {
+        position: absolute;
+      }
+      .btn-group {
+        position:relative;
+        .btn {
+          margin: 0;
+        }
+      }
+    }
+
 /**
 * Traceback
 * ============================================================================
